Add login and register forms to view components

--- a/mvc/view/register.ejs
+++ b/mvc/view/register.ejs
@@ -5,6 +5,7 @@
     <%- include("./components/header.ejs") %>
 
     <h1><%= title %></h1>
+    <%- include("./components/register_form.ejs") %>
 
     <%- include("./components/footer.ejs") %>
 </body>
