--- a/mvc/view/components/head.ejs
+++ b/mvc/view/components/head.ejs
@@ -1,5 +1,5 @@
 <head>
-    <title>My EJS Page</title>
+    <title><%= title%></title>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
