--- a/mvc/view/register.ejs
+++ b/mvc/view/register.ejs
@@ -5,7 +5,9 @@
     <%- include("./components/header.ejs") %>
 
     <h1><%= title %></h1>
-    <%- include("./components/register_form.ejs") %>
+    <main>
+        <%- include("./components/register_form.ejs") %>
+    </main>
 
     <%- include("./components/footer.ejs") %>
 </body>
