--- a/mvc/view/about.ejs
+++ b/mvc/view/about.ejs
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
-<%- include ("./components/head.ejs")%>
+<%- include("./components/head.ejs") %>
 <body>
-    <%- include("./components/header.ejs") %>
+    <%- include("./components/header") %>
 
-    <h1><%= title %></h1>
+    <main>
+        <div class="container my-5 text-center"> <!-- Added my-5 for vertical margin -->
+            <% if (typeof page.title !== 'undefined' && page.title){ %>
+                <h1 class="display-4"><%= page.title %></h1>
+            <% } %>
+        </div>
+
+        <div class="container my-6 text-center"> <!-- Added my-6 for vertical margin -->
+            <% if (typeof page.mission !== 'undefined' && page.mission){ %>
+                <h2>Our mission</h2>
+                <p><%= page.mission %></p>
+            <% } %>
+        </div>
+
+        <div class="container my-6 text-center"> <!-- Added my-6 for vertical margin -->
+            <% if (typeof page.teamMembers !== 'undefined' && page.teamMembers.length > 0) { %>
+                <h3>Team Members</h3>
+                <% page.teamMembers.forEach((member) => { %>
+                    <div>
+                        <h4><%= member.position %></h4>
+                        <p><%= member.name %></p>
+                    </div>
+                <% }); %>
+            <% } %>
+        </div>
+    </main>
 
     <%- include("./components/footer.ejs") %>
 </body>
