--- a/mvc/view/components/footer.ejs
+++ b/mvc/view/components/footer.ejs
@@ -1,3 +1,3 @@
-<footer>
-    <p>&copy; <%= currentYear %> crypto-market</p>
+<footer class="text-center py-4 mt-5">
+    <p class="mb-0">&copy; <%= currentYear %> crypto-market</p>
 </footer>
