--- a/mvc/view/contact.ejs
+++ b/mvc/view/contact.ejs
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html>
-<%- include ("./components/head.ejs")%>
+<%- include("./components/head.ejs") %>
 <body>
-    <%- include("./components/header.ejs") %>
+    <%- include("./components/header") %>
 
-    <h1><%= title %></h1>
+    <main>
+        <div class="container my-5 text-center"> <!-- Added my-5 for vertical margin -->
+            <% if (typeof page.title !== 'undefined' && page.title){ %>
+            <h1 class="display-4"><%= title %></h1> <!-- Utilized Bootstrap display heading -->
+            <% } %>
+        </div>
+
+        <div class="container my-6 text-center"> <!-- Added my-6 for vertical margin -->
+            <% if (typeof page.address !== 'undefined' && page.address){ %>
+                <h2>Address</h2>
+                <p><%= page.address %></p>
+            <% } %>
+        </div>
+
+        <div class="container my-6 text-center"> <!-- Added my-6 for vertical margin -->
+            <% if (typeof page.email !== 'undefined' && page.email){ %>
+                <h2>Email</h2>
+                <p><%= page.email %></p>
+            <% } %>
+        </div>
+
+        <div class="container my-6 text-center"> <!-- Added my-6 for vertical margin -->
+            <% if (typeof page.phone !== 'undefined' && page.phone){ %>
+                <h2>Phone</h2>
+                <p><%= page.phone %></p>
+            <% } %>
+        </div>
+
+        <div class="container my-6 text-center"> <!-- Added my-6 for vertical margin -->
+            <% if (typeof page.socialMedia !== 'undefined' && page.socialMedia){ %>
+                <h2>Social Media</h2>
+                <% Object.entries(page.socialMedia).forEach(([platform, link]) => { %>
+                    <div>
+                        <a href="<%= link %>" target="_blank">
+                        <%= platform.charAt(0).toUpperCase() + platform.slice(1) %>
+                        </a>
+                    </div>
+                  <% }); %>
+            <% } %>
+        </div>
+
+    </main>
 
     <%- include("./components/footer.ejs") %>
 </body>
