--- a/mvc/view/login.ejs
+++ b/mvc/view/login.ejs
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-<%- include ("./components/head.ejs")%>
+<%- include("./components/head.ejs") %>
 <body>
-    <%- include("./components/header.ejs") %>
+    <%- include("./components/header") %>
 
-    <h1><%= title %></h1>
-    <%- include ("./components/login_form.ejs") %>
+    <main>
+        <div class="container my-5"> <!-- Added my-5 for vertical margin -->
+            <h1 class="display-4"><%= title %></h1> <!-- Utilized Bootstrap display heading -->
+            <%- include ("./components/login_form.ejs") %>
+        </div>
+    </main>
 
+    <!--  error message component-->
+    <%- include("./components/error.ejs") %>
+
+    <!-- footer component -->
     <%- include("./components/footer.ejs") %>
 </body>
 </html>
