--- a/mvc/view/profile.ejs
+++ b/mvc/view/profile.ejs
@@ -6,14 +6,14 @@
 
     <main>
         <div class="container my-5 text-center"> <!-- Added my-5 for vertical margin -->
-            <% if (typeof page.title !== 'undefined' && page.title){ %>
-                <h1 class="display-4"><%= page.title %></h1>
+            <% if (typeof title !== 'undefined' && title){ %>
+                <h1 class="display-4"><%= title %></h1>
             <% } %>
         </div>
 
         <div class = "container my-5">
-            <% if (typeof page.description !== 'undefined' && page.description){ %>
-                <p ><%= page.description %></p>
+            <% if (typeof user !== 'undefined' && user){ %>
+                <p ><%= user.displayname %></p>
             <% } %>
         </div>
 
