--- a/mvc/view/components/register_form.ejs
+++ b/mvc/view/components/register_form.ejs
@@ -1,31 +1,63 @@
 <!-- FILEPATH: /Users/rohit/igor/Databases and the Web/crypto-market/mvc/view/components/register_form.ejs -->
-<form action="/api/register" method="POST">
+<form action="/api/register" method="POST" class="mt-4">
 
-<div>
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username" required>
-</div>
-
-<div>
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
-</div>
-
-<div>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required>
-</div>
-
-  <button type="submit">Register</button>
-  <a href="/login"><p>login</p></a>
-
-  <div>
-      <div><a href = "./api/register/google"><Google><i>[]<i> Google</a></div>
+  <div class="mb-3">
+    <label for="firstname" class="form-label">Firstname:</label>
+    <input type="text" id="firstname" name="firstname" class="form-control" required>
   </div>
+
+  <div class="mb-3">
+    <label for="middleName" class="form-label">MiddleName:</label>
+    <input type="text" id="middleName" name="middleName" class="form-control">
+  </div>
+
+  <div class="mb-3">
+    <label for="lastname" class="form-label">LastName:</label>
+    <input type="text" id="lastname" name="lastname" class="form-control">
+  </div>
+
+  <div class="mb-3">
+    <label for="username" class="form-label">Username:</label>
+    <input type="text" id="username" name="username" class="form-control" required>
+  </div>
+
+  <div class="mb-3">
+    <label for="email" class="form-label">Email:</label>
+    <input type="email" id="email" name="email" class="form-control" required>
+  </div>
+
+  <div class="mb-3">
+    <label for="password" class="form-label">Password:</label>
+    <input type="password" id="password" name="password" class="form-control" required>
+  </div>
+
+  <div class="mb-3">
+    <label for="password2" class="form-label">Confirm Password:</label>
+    <input type="password" id="password2" name="password2" class="form-control" required>
+  </div>
+
+  <div class="mt-3">
+    <div>
+      <button type="submit" class="btn btn-primary mt-2 d-block text-center"><i class="fab fa-google"></i> Register</button>
+    </div>
+  </div>
+
+  <div class="mt-3">
+    <div>
+      <a href="/login" class="btn btn-success mt-2 d-block text-center"><i class="fab fa-google"></i> Sign In</a>
+    </div>
+  </div>
+
+  <div class="mt-3">
+    <div>
+      <a href="./api/register/google" class="btn btn-danger mt-2 d-block text-center"><i class="fab fa-google"></i> Register with Google</a>
+    </div>
+  </div>
+
 </form>
 
-<div>
+<div class="mt-3">
   <% if (typeof error !== 'undefined') { %>
-    <p>Error: <%= error %></p>
+    <p class="text-danger">Error: <%= error %></p>
   <% } %>
 </div>
