Fix typo in error.ejs file

--- a/mvc/view/components/error.ejs
+++ b/mvc/view/components/error.ejs
@@ -1,7 +1,7 @@
 <% if (typeof error !== 'undefined' && error) { %>
 
   <div class="error-message">
-    <% if (erro.status) { %>
+    <% if (error.status) { %>
         <b><%= error.status %> : </b>
     <%}%>
 
