--- a/mvc/view/components/register_form.ejs
+++ b/mvc/view/components/register_form.ejs
@@ -1,40 +1,52 @@
 <!-- FILEPATH: /Users/rohit/igor/Databases and the Web/crypto-market/mvc/view/components/register_form.ejs -->
 <form action="/api/register" method="POST" class="mt-4">
 
+  <!-- inputs  -->
+<% if(typeof formData !== undefined && formData) {%>
+  <!-- firstname -->
   <div class="mb-3">
     <label for="firstname" class="form-label">Firstname:</label>
-    <input type="text" id="firstname" name="firstname" class="form-control" required>
+    <input type="text" id="firstname" name="firstname" class="form-control" value="<%= formData.firstname || '' %>" required>
   </div>
 
+  <!-- middlename -->
   <div class="mb-3">
     <label for="middleName" class="form-label">MiddleName:</label>
-    <input type="text" id="middleName" name="middleName" class="form-control">
+    <input type="text" id="middleName" name="middleName" class="form-control" value="<%= formData.middleName || '' %>">
   </div>
 
+  <!-- lastname -->
   <div class="mb-3">
     <label for="lastname" class="form-label">LastName:</label>
-    <input type="text" id="lastname" name="lastname" class="form-control">
+    <input type="text" id="lastname" name="lastname" class="form-control" value="<%= formData.lastname || '' %>">
   </div>
 
+  <!-- username -->
   <div class="mb-3">
     <label for="username" class="form-label">Username:</label>
-    <input type="text" id="username" name="username" class="form-control" required>
+    <input type="text" id="username" name="username" class="form-control" value="<%= formData.username || '' %>" required>
   </div>
 
+  <!-- email -->
   <div class="mb-3">
     <label for="email" class="form-label">Email:</label>
-    <input type="email" id="email" name="email" class="form-control" required>
+    <input type="email" id="email" name="email" class="form-control" value="<%= formData.email || '' %>" required>
   </div>
 
+  <!-- password -->
   <div class="mb-3">
     <label for="password" class="form-label">Password:</label>
-    <input type="password" id="password" name="password" class="form-control" required>
+    <input type="password" id="password" name="password" class="form-control" value="<%= formData.password || '' %>" required>
   </div>
 
+  <!-- confirm password -->
   <div class="mb-3">
     <label for="password2" class="form-label">Confirm Password:</label>
-    <input type="password" id="password2" name="password2" class="form-control" required>
+    <input type="password" id="password2" name="password2" class="form-control" value="<%= formData.password2 || '' %>"  required>
   </div>
+
+<%}%>
+  <!--  submit button -->
 
   <div class="mt-3">
     <div>
@@ -42,12 +54,14 @@
     </div>
   </div>
 
+  <!--  link to login button -->
   <div class="mt-3">
     <div>
       <a href="/login" class="btn btn-success mt-2 d-block text-center"><i class="fab fa-google"></i> Sign In</a>
     </div>
   </div>
 
+  <!--  link to google button -->
   <div class="mt-3">
     <div>
       <a href="./api/register/google" class="btn btn-danger mt-2 d-block text-center"><i class="fab fa-google"></i> Register with Google</a>
@@ -55,9 +69,3 @@
   </div>
 
 </form>
-
-<div class="mt-3">
-  <% if (typeof error !== 'undefined') { %>
-    <p class="text-danger">Error: <%= error %></p>
-  <% } %>
-</div>
