Add main and footer sections to index.ejs

--- a/mvc/view/index.ejs
+++ b/mvc/view/index.ejs
@@ -4,6 +4,7 @@
 <body>
     <%- include("./components/header") %>
 
+    <!-- main  -->
     <main>
         <div class="container my-5 text-center"> <!-- Added my-5 for vertical margin -->
             <% if (typeof page.title !== 'undefined' && page.title){ %>
@@ -19,6 +20,7 @@
 
     </main>
 
+    <!-- footer -->
     <%- include("./components/footer.ejs") %>
 </body>
 </html>
