Add side bar and mode toggle button to header

--- a/mvc/view/components/header.ejs
+++ b/mvc/view/components/header.ejs
@@ -3,6 +3,7 @@
     <div class="container">
       <h1 class="my-5" style="color: red;">crypto-market</h1>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <%- include("./side_bar") %>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
@@ -11,6 +12,7 @@
             <li class="nav-item"><a class="nav-link" href="/finance">Finance</a></li>
           </ul>
           <ul class="navbar-nav">
+            <div id="modeToggleBtn" class="btn btn-sm btn-primary rounded-circle text-center"><i class="fa-solid fa-circle-half-stroke"></i></div>
             <% if (typeof user === 'undefined' || !user){ %>
               <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
               <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
