--- a/mvc/view/dashboard.ejs
+++ b/mvc/view/dashboard.ejs
@@ -3,20 +3,17 @@
 <%- include("./components/head.ejs") %>
 <body>
     <%- include("./components/header") %>
-
+    
     <main>
-
         <div class="container my-5 text-center"> <!-- Added my-5 for vertical margin -->
-            <% if (typeof page.title !== 'undefined' && page.title){ %>
-                <h1 class="display-4"><%= page.title %></h1>
-            <% } %>
-        </div>
+            <% if (typeof title !== 'undefined' && title){ %>
+                <h1 class="display-4"><%= title %></h1>
+                <% } %>
+            </div>
+            
+            <div class = "container my-5">
 
-        <div class = "container my-5">
-            <% if (typeof page.description !== 'undefined' && page.description){ %>
-                <p ><%= page.description %></p>
-            <% } %>
-        </div>
+            </div>
 
     </main>
 
