Update sidebar links

--- a/mvc/view/components/side_bar.ejs
+++ b/mvc/view/components/side_bar.ejs
@@ -9,13 +9,13 @@
           </a>
       </li>
       <li class="sidebar-item">
-          <a href="/about" class="sidebar-link">
+          <a href="/profile" class="sidebar-link">
               <i class="fa-solid fa-list pe-2"></i>
               Profile
           </a>
       </li>
       <li class="sidebar-item">
-          <a href="#" class="sidebar-link collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard" aria-expanded="false" aria-controls="dashboard">
+          <a href="/dashboard" class="sidebar-link collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard" aria-expanded="false" aria-controls="dashboard">
               <i class="fa-solid fa-sliders pe-2"></i>
               Dashboard
           </a>
