--- a/mvc/view/components/side_bar.ejs
+++ b/mvc/view/components/side_bar.ejs
@@ -15,7 +15,7 @@
           </a>
       </li>
       <li class="sidebar-item">
-          <a href="/dashboard" class="sidebar-link collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard" aria-expanded="false" aria-controls="dashboard">
+          <a href="/dashboard" class="sidebar-link">
               <i class="fa-solid fa-sliders pe-2"></i>
               Dashboard
           </a>
