Remove font awesome icons from register and login buttons

--- a/mvc/view/components/register_form.ejs
+++ b/mvc/view/components/register_form.ejs
@@ -50,14 +50,14 @@
 
   <div class="mt-3">
     <div>
-      <button type="submit" class="btn btn-primary mt-2 d-block text-center"><i class="fab fa-google"></i> Register</button>
+      <button type="submit" class="btn btn-primary mt-2 d-block text-center"> Register</button>
     </div>
   </div>
 
   <!--  link to login button -->
   <div class="mt-3">
     <div>
-      <a href="/login" class="btn btn-success mt-2 d-block text-center"><i class="fab fa-google"></i> Sign In</a>
+      <a href="/login" class="btn btn-success mt-2 d-block text-center"> Sign In</a>
     </div>
   </div>
 
