--- a/mvc/view/components/profile_form.ejs
+++ b/mvc/view/components/profile_form.ejs
@@ -37,6 +37,12 @@
           <input type="text" id="email" name="email" class="form-control" value="<%= user.email || '' %>" required>
       </div>
 
+      <!-- role -->
+      <div class="mb-3">
+        <label for="roleSelector">Role:</label>
+        <select id="roleSelector" name="role"></select>
+      </div>
+
       <!-- password -->
       <div class="mt-3">
           <div>
@@ -54,3 +60,24 @@
 
   </div>
 </form>
+
+<script>
+    fetch('/api/roles')
+        .then(response => response.json())
+        .then(data => {
+            const enumValues = data.enumValues;
+            // Populate your frontend query selector
+            const roleSelector = document.getElementById('roleSelector'); // Replace with your actual selector ID
+
+            enumValues.forEach(value => {
+            const option = document.createElement('option');
+            option.value = value;
+            option.text = value;
+            roleSelector.appendChild(option);
+            });
+        })
+        .catch(error => {
+            console.error('Error fetching enum values:', error);
+        });
+
+</script>
