--- a/mvc/view/profile.ejs
+++ b/mvc/view/profile.ejs
@@ -11,6 +11,7 @@
                 <% } %>
             </div>
             
+        <%- include("./components/error.ejs") %>
         <%- include("./components/profile_form.ejs") %>
         
     </main>
