--- a/mvc/view/components/password_update_form.ejs
+++ b/mvc/view/components/password_update_form.ejs
@@ -1,4 +1,4 @@
-<form action="/api/register" method="POST" class="mt-4">
+<form action="/profile/password-update" method="POST" class="mt-4">
     <!-- Old Password -->
     <div class="mb-3">
         <label for="oldPassword" class="form-label">Old Password:</label>
@@ -17,6 +17,9 @@
         <input type="text" id="confirmPassword" name="confirmPassword" class="form-control" value="<%=  '' %>" required>
     </div>
 
+    <!-- Hidden input field for user.email -->
+    <input type="hidden" id="emai" name="email" value="<%= user.email %>">
+    
     <!-- submit button -->
     <div class="mt-3">
         <div>
