Update profile form and password update link

--- a/mvc/view/components/profile_form.ejs
+++ b/mvc/view/components/profile_form.ejs
@@ -43,10 +43,13 @@
         <select id="roleSelector" name="role"></select>
       </div>
 
+      <!-- Hidden input field for user.email -->
+     <input type="hidden" id="userEmail" name="userEmail" value="<%= user.email %>">
+     
       <!-- password -->
       <div class="mt-3">
           <div>
-          <a  href="/profile/update-password/" class="btn btn-success mt-2 d-block text-center"><i class="fab"></i> Update Password </a>
+          <a  href="/profile/password-update" class="btn btn-success mt-2 d-block text-center"><i class="fab"></i> Update Password </a>
           </div>
       </div>
 
