--- a/public/style.css
+++ b/public/style.css
@@ -46,9 +46,9 @@
   }
   
   .alert-danger {
-    background-color: #401a1a;
+    background-color: #f07171;
     border-color: #2c1212;
-    color: #f07171;
+    color: #8b1b1b;
   }
   
   /* Custom styles */
