Add search functionality to sidebar

--- a/mvc/view/components/side_bar.ejs
+++ b/mvc/view/components/side_bar.ejs
@@ -26,6 +26,12 @@
               Finance
           </a>
       </li>
+      <li class="sidebar-item">
+        <a href="/admin/user/search" class="sidebar-link">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            Search
+        </a>
+    </li>
   </ul>
 </aside>
 
