fixed the fetching routes as per server page

--- a/mvc/view/admin_user_search.ejs
+++ b/mvc/view/admin_user_search.ejs
@@ -22,6 +22,6 @@
 
     <%- include("./components/footer.ejs") %>
 
-    <script defer src="../../public/pagination.js"></script>
+    <script defer src="../../public/js/pagination.js"></script>
 </body>
 </html>
