refactor the routes and resource urls

--- a/mvc/view/components/profile_form.ejs
+++ b/mvc/view/components/profile_form.ejs
@@ -65,7 +65,7 @@
 </form>
 
 <script>
-    fetch('/api/roles')
+    fetch('https://doc.gold.ac.uk/usr/642/api/roles')
         .then(response => response.json())
         .then(data => {
             const enumValues = data.enumValues;
