--- a/mvc/view/components/side_bar.ejs
+++ b/mvc/view/components/side_bar.ejs
@@ -3,31 +3,31 @@
   <!-- Sidebar Navigation -->
   <ul class="sidebar-nav custom-list">
       <li class="sidebar-item">
-          <a href="/" class="sidebar-link">
+          <a href="<%= process.env.BASE_URL%>/" class="sidebar-link">
               <i class="fa-solid fa-home pe-2"></i>
               Home
           </a>
       </li>
       <li class="sidebar-item">
-          <a href="/profile" class="sidebar-link">
+          <a href="<%= process.env.BASE_URL%>/profile" class="sidebar-link">
               <i class="fa-solid fa-list pe-2"></i>
               Profile
           </a>
       </li>
       <li class="sidebar-item">
-          <a href="/dashboard" class="sidebar-link">
+          <a href="<%= process.env.BASE_URL%>/dashboard" class="sidebar-link">
               <i class="fa-solid fa-sliders pe-2"></i>
               Dashboard
           </a>
       </li>
       <li class="sidebar-item">
-          <a href="/finance" class="sidebar-link">
+          <a href="<%= process.env.BASE_URL%>/finance" class="sidebar-link">
               <i class="fa-solid fa-calculator pe-2"></i>
               Finance
           </a>
       </li>
       <li class="sidebar-item">
-        <a href="/admin/user/search" class="sidebar-link">
+        <a href="<%= process.env.BASE_URL%>/admin/user/search" class="sidebar-link">
             <i class="fa-solid fa-magnifying-glass"></i>
             Search
         </a>
