--- a/mvc/view/components/header.ejs
+++ b/mvc/view/components/header.ejs
@@ -6,16 +6,16 @@
         <%- include("./side_bar") %>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="/finance">Finance</a></li>
+            <li class="nav-item"><a class="nav-link" href="<%= process.env.BASE_URL%>/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="<%= process.env.BASE_URL%>/about">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="<%= process.env.BASE_URL%>/contact">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="<%= process.env.BASE_URL%>/finance">Finance</a></li>
           </ul>
           <ul class="navbar-nav">
             <div id="modeToggleBtn" class="btn btn-sm btn-primary rounded-circle text-center"><i class="fa-solid fa-circle-half-stroke"></i></div>
             <% if (typeof user === 'undefined' || !user){ %>
-              <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-              <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= process.env.BASE_URL%>/login">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="<%= process.env.BASE_URL%>/register">Register</a></li>
             <% } else { %>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -26,9 +26,9 @@
                   <i class="bi bi-gear"></i> <!-- Font Awesome cog icon -->
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                  <li><a class="dropdown-item" href="/profile">Profile</a></li>
+                  <li><a class="dropdown-item" href="<%= process.env.BASE_URL%>/profile">Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/api/logout">Logout</a></li>
+                  <li><a class="dropdown-item" href="<%= process.env.BASE_URL%>/api/logout">Logout</a></li>
                 </ul>
               </li>
             <% } %>
