fix the html errors

--- a/mvc/view/dashboard.ejs
+++ b/mvc/view/dashboard.ejs
@@ -22,5 +22,7 @@
 
     <!-- footer -->
     <%- include("./components/footer.ejs") %>
+    <script defer src="../../public/js/script.js"></script>
+
 </body>
 </html>
