--- a/mvc/view/register.ejs
+++ b/mvc/view/register.ejs
@@ -14,5 +14,6 @@
     </main>
     
     <%- include("./components/footer.ejs") %>
-    </html>
+    <script defer src="../../public/js/script.js"></script>
 </body>
+</html>
