--- a/mvc/view/update_password.ejs
+++ b/mvc/view/update_password.ejs
@@ -14,5 +14,7 @@
     </main>
     
     <%- include("./components/footer.ejs") %>
-    </html>
+    <script defer src="../../public/js/script.js"></script>
+
 </body>
+</html>
