--- a/mvc/view/register.ejs
+++ b/mvc/view/register.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <%- include("./components/head.ejs") %>
 <body>
     <%- include("./components/header") %>
@@ -14,6 +14,6 @@
     </main>
     
     <%- include("./components/footer.ejs") %>
-    <script defer src="../../public/js/script.js"></script>
+
 </body>
 </html>
