--- a/mvc/view/dashboard.ejs
+++ b/mvc/view/dashboard.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <%- include("./components/head.ejs") %>
 <body>
     <%- include("./components/header") %>
@@ -22,7 +22,7 @@
 
     <!-- footer -->
     <%- include("./components/footer.ejs") %>
-    <script defer src="../../public/js/script.js"></script>
+
 
 </body>
 </html>
