--- a/mvc/view/components/login_form.ejs
+++ b/mvc/view/components/login_form.ejs
@@ -3,7 +3,7 @@
 
   <% if(typeof formData !== undefined && formData ) { %>
   <div class="mb-3">
-    <label for="email" class="form-label">Email:</label>
+    <label for="email" class="form-label">Email or Username:</label>
     <input type="text" id="email" name="email" class="form-control" value= "<%=formData.email || '' %>" required>
   </div>
   
